tests/ui/traits/non_lifetime_binders/issue-118697.stderr
error[E0412]: cannot find type `A` in this scope
  --> $DIR/issue-118697.rs:4:22
   |
LL | type T = dyn for<V = A(&())> Fn(());
   |                      ^ not found in this scope

error: default parameter is not allowed in this binder
  --> $DIR/issue-118697.rs:4:22
   |
LL | type T = dyn for<V = A(&())> Fn(());
   |                      ^^^^^^

error: late-bound type parameter not allowed on trait object types
  --> $DIR/issue-118697.rs:4:18
   |
LL | type T = dyn for<V = A(&())> Fn(());
   |                  ^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0412`.
